tests/pass/01_hello_world.zn
foreign u0 printf(*char)

u32 main() {
    printf("Hello, World!\n")
    return 0
}
