tests/fail/04_undeclared_static_method.zn
foreign u0 printf(*char)

u32 main() {
    Ghost::method()
    return 0
}
